@@ -128,6 +128,7 @@ wxMSW:
 wxOSX:
 
 - Fix dispatching pending events (and CallAfter()) in console applications.
+- Implement wxDataViewColumn::UnsetAsSortKey() (Daniel Kulp).
 
 wxQt:
 
